infra.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: "Arquitectura del ecommerce"

Parameters: 
  Environment: 
    Description: "dev"
    Type: String 
    Default: "dev"
    AllowedValues: 
        - "dev"
        - "staging"
        - "prod"

  DbName: 
    Description: "Nombre de la Base de Datos"
    Type: String
    Default: "EcommerceDB"
    
  DbUser:
    Description: "Usuario base de datos"
    Type: String
    Default: "EcommerceUser"

  DbPassword: 
    Description: "Contrasena dela base de datos"
    Type: String
    Default: "EcommercePassword"
    NoEcho: true

  KeyName: 
    Description: "Nombre del par de claves EC2"
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: "EcommerceKey"

  SSHBastion:
      Description: "IP permitida para acceder al Bastion"
      Type: String
      Default: "0.0.0.0/0"

  Email: 
    Description: "Email para las alertas"
    Type: String
    Default: "v.ortizzuleta@gmail.com"

  Number:
    Description: "Numero para alertas sms"
    Type: String
    Default: "+573154159918"


  InstanceType:
    Description: "Tipo de instacia de la EC2"
    Type: String
    Default: "t2.medium"

  DBInstanceType:
    Description: "Tipo de instancia de RDS"
    Type: String
    Default: "db.t3.micro"

Mappings: 
  Region: 
    us-east-1: 
      AMI: 'ami-0f88e80871fd81e91' #Amazon Linux 2

Resources: 
  VPCEcommerce:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-VPC'

  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCEcommerce
      CidrBlock: '10.0.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true #Subnet publica 
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-PublicSubnet'

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCEcommerce
      CidrBlock: '10.0.3.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true #Subnet publica 
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-PublicSubnet2'

  PrivateSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCEcommerce
      CidrBlock: '10.0.2.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: false #Subnet privada 
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-PrivateSubnet'
  
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCEcommerce
      CidrBlock: '10.0.4.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: false #Subnet privada 
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-PrivateSubnet2'

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags: 
        - Key: Name
          Value: !Sub '${Environment}-InternetGateway'

  AttachmentGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPCEcommerce

  ElasticIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-ElasticIP'

  NatGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt ElasticIP.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-Natgateway'
  
  # Public Route Table
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPCEcommerce
      Tags:
        - Key: Name
          Value: !Sub "${Environment}-PublicRouteTable"
        - Key: Environment
          Value: !Ref Environment

  # Route to Internet Gateway
  PublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Associate Public Subnet with Public Route Table
  PublicSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable


  # Private Route Table
  PrivateRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPCEcommerce
      Tags:
        - Key: Name
          Value: !Sub "${Environment}-PrivateRouteTable"
        - Key: Environment
          Value: !Ref Environment

  # Route to NAT Gateway
  PrivateRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  # Associate Private Subnet with Private Route Table
  PrivateSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

 #Grupo de seguridad ecommerce EC2
  SecurityGroupEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Grupo de seguridad EC2, permite el trafico del Load Balancer y el Bastion"
      SecurityGroupEgress:
        - IpProtocol: '-1'  # Todos los protocolos
          CidrIp: '0.0.0.0/0'
          Description: 'Permitir todo el trafico de salida'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
          Description: 'Permitir trafico HTTP al Load Balancer'
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
          Description: 'Permitir acceso a Spring Boot desde el ALB'
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup
          Description: 'Permitir SSH desde el Bastion'

      Tags:
        - Key: Name
          Value: !Sub "${Environment}-SecurityGroupEC2"
      VpcId: !Ref VPCEcommerce

 #Grupo de seguridad Bastion
  BastionSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Grupo de seguridad del Bastion"
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHBastion
      Tags: 
        - Key: Name
          Value: !Sub "${Environment}-BastionSecurityGroup"
      VpcId: !Ref VPCEcommerce

 #Grupo de seguridad Base de datos
  SecurityGroupDB:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Grupo de seguridad de la base de datos"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref SecurityGroupEC2 
      Tags:
        - Key: Name
          Value: !Sub "${Environment}-SecurityGroupDB"
      VpcId: !Ref VPCEcommerce

 #Grupo de seguridad de Load Balancer
  LoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Security Group para ALB - Permite HTTP/HTTPS'
      VpcId: !Ref VPCEcommerce
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
          Description: 'Permitir HTTP desde cualquier lugar'
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: '0.0.0.0/0'
          Description: 'Permitir HTTPS desde cualquier lugar'
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
          Description: 'Permitir respuestas HTTP a las instancias'
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: '0.0.0.0/0'
          Description: 'Permitir respuestas al puerto 8080'
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-LoadBalancerSecurityGroup'

  DBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: 'Subnet group para RDS'
      SubnetIds:
        - !Ref PrivateSubnet
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-DBSubnetGroup'
            
#Instancia Base de datos
  DBInstance:    
    Type: "AWS::RDS::DBInstance"
    Properties:
      AllocatedStorage: 20
      DBInstanceClass: !Ref DBInstanceType
      DBName: !Ref DbName
      DBSubnetGroupName: !Ref DBSubnetGroup
      Engine: "postgres"
      MasterUsername: !Ref DbUser
      MasterUserPassword: !Ref DbPassword
      MultiAZ: false
      PubliclyAccessible: false 
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-DBInstance'
      VPCSecurityGroups:
        - !GetAtt SecurityGroupDB.GroupId

  EcommerceEC2:
    Type: 'AWS::EC2::LaunchTemplate'
    Properties:
      LaunchTemplateName: !Sub '${Environment}-LaunchTemplate'
      LaunchTemplateData:
        ImageId: !FindInMap ['Region', !Ref 'AWS::Region', 'AMI']
        InstanceType: !Ref InstanceType
        KeyName: !Ref KeyName
        SecurityGroupIds:
          - !Ref SecurityGroupEC2
        UserData: 
          Fn::Base64: 
           Fn::Sub: 
            - |
              #!/bin/bash
              set -xe

              # --- PASO 1: Actualizar sistema e instalar dependencias ---
              dnf update -y
              dnf install -y git nodejs postgresql15

              # --- PASO 2: Clonar y desplegar proyecto ---
              cd /home/ec2-user
              git clone https://github.com/vortzzz/e-commerce.git

              # Corregir permisos inmediatamente
              chown -R ec2-user:ec2-user /home/ec2-user/e-commerce

              cd /home/ec2-user/e-commerce/nova-backend

              # --- PASO 3: Configurar variables de entorno ---
              cat > .env <<EOF
              PORT=3000
              NODE_ENV=production

              JWT_SECRET=ecommerce_jwt_secret_2026_seguro
              JWT_EXPIRES_IN=7d

              BCRYPT_ROUNDS=10

              DB_HOST=${dbendpoint}
              DB_PORT=5432
              DB_NAME=${dbname}
              DB_USER=${dbusername}
              DB_PASSWORD=${dbpassword}
              DB_SSL=false

              DB_POOL_MAX=10
              DB_IDLE_TIMEOUT_MS=30000
              DB_CONNECTION_TIMEOUT_MS=5000

              ALLOWED_ORIGINS=*
              PAYMENT_SERVICE_URL=https://api.fakepay.nova/v1
              PAYMENT_API_KEY=pk_test_demo
              EOF

              chown ec2-user:ec2-user .env

              # --- PASO 4: Inicializar PostgreSQL ---
              export PGPASSWORD=${dbpassword}
              psql -h ${dbendpoint} -U ${dbusername} -d ${dbname} -f /home/ec2-user/e-commerce/nova-backend/sql/init.sql

              # --- PASO 5: Instalar backend como ec2-user ---
              su - ec2-user -c "cd /home/ec2-user/e-commerce/nova-backend && npm install"

              # PM2 sí va global, así que sudo/root está bien
              sudo npm install -g pm2

              # Iniciar app como ec2-user
              su - ec2-user -c "cd /home/ec2-user/e-commerce/nova-backend && pm2 start npm --name ecommerce-api -- start"
              su - ec2-user -c "pm2 save"

              # --- PASO 6: Persistir PM2 ---
              env PATH=$PATH:/usr/bin pm2 startup systemd -u ec2-user --hp /home/ec2-user

            - dbusername: !Ref DbUser
              dbpassword: !Ref DbPassword
              dbendpoint: !GetAtt DBInstance.Endpoint.Address
              dbname: !Ref DbName

  BastionHost:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't2.micro'
      ImageId: !FindInMap ['Region', !Ref 'AWS::Region', 'AMI']
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref BastionSecurityGroup
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-BastionHost' 

  AutoescalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      MinSize: 1
      MaxSize: 2
      DesiredCapacity: 1
      HealthCheckType: ELB
      HealthCheckGracePeriod: 300
      TargetGroupARNs:
        - !Ref ALBTargetGroup
      VPCZoneIdentifier:
        - !Ref PrivateSubnet
      LaunchTemplate:
        LaunchTemplateId: !Ref EcommerceEC2
        Version: !GetAtt EcommerceEC2.LatestVersionNumber

  ApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Sub '${Environment}-ApplicationLoadBalancer'
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Type: application
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-ApplicationLoadBalancer'

  ALBTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub '${Environment}-ALBTargetGroup'
      Port: 3000
      Protocol: HTTP
      VpcId: !Ref VPCEcommerce
      HealthCheckPath: /health
      HealthCheckIntervalSeconds: 30
      TargetType: instance

  ALBListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup

Outputs:
  URL:
    Description: "Url del ecommerce"
    Value: !Sub
      - http://${DNS}
      - DNS: !GetAtt ApplicationLoadBalancer.DNSName
